--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.7.8",
     "vue-router": "^3.5.4",
+    "vue-slick-carousel": "^1.0.6",
     "vue2-editor": "^2.10.3",
     "vuetify": "^2.6.0"
   },
